src/styles/_error.scss
/* ... */
@media screen and (min-width: 2501px) and (max-width:2560px){
     .kasa-error{
          position: relative;
          width: 90%;
          height: 1024px;
     
          background: #FFFFFF;
          flex-direction: column;
          justify-content: center;
          align-items: center;
          
          h1{
               position: absolute;
               left: 67%;
               right: 0%;
               top: -30%;
               bottom: 0%;
          
               @include  policeStyle1();
               font-weight: 700;
               font-size: 288px;
               
               display: flex;
               align-items: center;
               text-align: center;
               text-decoration: none;
               color: #FF6060;
          
          }
          
          h2{
               position: absolute;
               left: 57.49%;
               right: 18.96%;
               top: 59.18%;
               bottom: 35.84%;
     
               @include  policeStyle1();
               font-size: 36px;
              
               display: flex;
               align-items: flex-end;
     
               color: #FF6060;
     
          }
        
          p{
               position: absolute;
               left: 74.14%;
               right: 30.14%;
               top: 81.93%;
               bottom: 15.53%;
               width: 80%;
               @include  policeStyle1();
               font-size: 24px;
              
               display: flex;
               align-items: flex-end;
               text-decoration-line: underline;
     
               color: #FF6060;
          }
     }
}     
@media screen and (min-width: 2000px) and (max-width:2500px){
     .kasa-error{
          position: relative;
          width: 80%;
          height: 1024px;
     
          background: #FFFFFF;
          flex-direction: column;
          justify-content: center;
          align-items: center;
          h1{
               position: absolute;
               left: 63%;
               right: 0%;
               top: -30%;
               bottom: 0%;
          
               @include  policeStyle1();
               font-weight: 700;
               font-size: 288px;
               
               display: flex;
               align-items: center;
               text-align: center;
          
               color: #FF6060;
          
          }
          
          h2{
               position: absolute;
               left: 53.49%;
               right: 18.96%;
               top: 59.18%;
               bottom: 35.84%;
     
               @include  policeStyle1();
               font-size: 36px;
              
               display: flex;
               align-items: flex-end;
     
               color: #FF6060;
     
          }
         
          p{
               position: absolute;
               left: 71.14%;
               right: 0.14%;
               top: 81.93%;
               bottom: 15.53%;
     
               @include  policeStyle1();
               font-size: 24px;
              
               display: flex;
               align-items: flex-end;
               text-decoration-line: underline;
     
               color: #FF6060;
          }
     }
} 
@media screen and (min-width: 1201px) and (max-width:1400px){
     .kasa-error{
          position: relative;
          width: 100%;
          flex-direction: column;
          justify-content: center;
          align-items: center;
        
     
          background: #FFFFFF;
          h1{
               position: absolute;
               left: 35%;
               right: 0%;
               top: -30%;
               bottom: 0%;

               @include  policeStyle1();
               font-weight: 700;
               font-size: 122px;
              
               display: flex;
               align-items: center;
               text-align: center;

               color: #FF6060;
          
          }
         
          h2{
               position: absolute;
               left: 24.27%;
               right: 20.8%;
               top: 52.6%;
               bottom: 49.94%;
               width: 52%;
               height: 51px;
               @include  policeStyle1();
               font-size: 22px;
              

               display: flex;
               align-items: flex-end;
               text-align: center;

               color: #FF6060;

               }

               
          p{
               position: absolute;
               left: 34%;
               right: 20.8%;
               top: 68.6%;
               bottom: 28.94%;

               @include  policeStyle1();
               font-size: 18px;
              
               display: flex;
               align-items: flex-end;
               text-decoration-line: underline;

               color: #FF6060;

          }
     }

}    
/* ... */

